
- The models =gpt-41-copilot=, =gpt-5= and =claude-opus-41= have been
  removed from the default list of GitHub Copilot models.  These models
  are no longer available in the GitHub Copilot API.

** New models and backends

- xAI backend: Add support for =grok-4-1-fast-reasoning=,
  =grok-4-1-fast-non-reasoning=, =grok-4-fast-reasoning=, and
  =grok-4-fast-non-reasoning=.

** New features and UI changes

- When using ~setopt~ or the customize interface, ~gptel-backend~ can
  now be specified as a list instead of an opaque object.  See its
  documentation for details.

** Notable bug fixes

- ~gptel-backend~ can now be set from customize buffers.  These are
  produced by, for example, =M-x customize-group ⮐ gptel=.  Previously
  ~gptel-backend~ was displayed in a read-only way, and could even break
  the display of the customize buffer depending on its value.

* 0.9.9.4

** Breaking changes

- The models =gpt-5-codex=, =o3=, =o3-mini=, =o4-mini=,
  =claude-3.5-sonnet=, =claude-3.7-sonnet=, =claude-3.7-sonnet-thought=,
  =claude-opus-4= and =gemini-2.0-flash-001= have been removed from the
  default list of GitHub Copilot models.  These models are no longer
  available in the GitHub Copilot API.

- =gptel-track-media= now controls whether links to media files are
  tracked /only/ in chat buffers.  Previously it also controlled whether
  media files added to the context explicitly via =gptel-add-file= were
  sent.  This is considered a bug and has now been fixed.

** New models and backends

- GitHub Copilot backend: Add support for =gpt-5.2=, =gpt-5.2-codex=,
  =gpt-41-copilot=, =claude-opus-4.5=, =claude-opus-4.6=,
  =gemini-3-pro-preview= and =gemini-3-flash-preview=.

- Anthropic backend: Add support for =claude-opus-4-6= and
  =claude-sonnet-4-6=.

- Bedrock backend: Add support for =claude-opus-4-5=,
  =claude-opus-4-6=, =claude-sonnet-4-6= and =nova-2-lite=.

- Add support for =gemini-3.1-pro-preview=, =gemini-3-pro-preview= and
  =gemini-3-flash-preview=.
